<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".mainscreens.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <Button android:id="@+id/picButton"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:text="@string/picButton"
        android:layout_gravity="center_horizontal"
        android:onClick="picButton"/>

    <TextView android:id="@+id/codedec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/codedec"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center" />

    <TextView android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/code"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:textStyle="bold"
        android:textSize="50dp" />

    <EditText
        android:id="@+id/answerA"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answerA"
        android:textAlignment="center"
        android:textColor="#0317f8"
        android:inputType="number|phone" />

    <Button android:id="@+id/verifyButton"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:text="@string/verifyButton"
        android:layout_gravity="center_horizontal"
        android:onClick="verifyButton"/>

    <TextView android:id="@+id/verifyMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/verifyMessage"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="#ff0000" />



</LinearLayout>
