<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.context.kroket.escapeapp.MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/player_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player_name"
        android:inputType="text" />

    <TextView android:id="@+id/connectionMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/connectionMessage"
        android:layout_gravity="center_horizontal" />
    <Button android:id="@+id/connectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectButton"
        android:onClick="connectButton"
        android:layout_gravity="center_horizontal" />
    <Button android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startButton"
        android:onClick="startButton"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
