<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".minigames.B_TapGame">

    <Button android:id="@+id/clickButton"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:text="@string/clickButton"
        android:layout_gravity="center_horizontal"
        android:onClick="clickButton"
        android:layout_below="@+id/timer"
        android:layout_centerHorizontal="true" />

    <TextView android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:textStyle="bold"
        android:textSize="60dp"
        android:layout_alignLeft="@+id/clickButton"
        android:layout_alignStart="@+id/clickButton"
        android:layout_marginTop="120dp"
        android:textAlignment="center"/>

    <TextView android:id="@+id/buttonSequence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textAlignment="center"
        android:text="wait for buttons"
        android:layout_below="@+id/amount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp" />

    <TextView android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:hint="@string/amount"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="34dp"
        android:textAlignment="center"
        android:layout_below="@+id/clickButton"
        android:layout_centerHorizontal="true" />

    <TextView android:id="@+id/gameB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07"
        android:hint="@string/gameB"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
